--- a/MobileWallet/Info.plist
+++ b/MobileWallet/Info.plist
@@ -21,7 +21,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSFaceIDUsageDescription</key>
-	<string>Enable Face ID to unlock your wallet</string>
+	<string>Enable Face ID to protect your wallet</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AvenirLTStd-Black.otf</string>
